tests/security/taintThroughResultError/output.txt
ERROR: TaintedData - input.hack:32:14 - Data from a URL query string found its way to an HTML tag using path $_GET --array-fetch--> $_GET['bad'] (input.hack:38:32) ----> call to ResultError::__construct (input.hack:38:32) ----> ResultError::__construct#1 (input.hack:12:40) ----> $message (input.hack:12:40) ----> $this->message (input.hack:12:40) --property-assignment--> $this (input.hack:12:40) ----> $this in ResultError after __construct (input.hack:12:18) ----> return (input.hack:38:16) ----> get_a_result() (input.hack:36:26) ----> $a (input.hack:22:5) --refine-symbol--> $a narrowed to ResultError (input.hack:23:9) ----> return (input.hack:24:16) ----> foo() (input.hack:21:17) ----> $b (input.hack:30:5) --refine-symbol--> $b narrowed to ResultError (input.hack:31:9) ----> $this in ResultError before getError (input.hack:16:21) ----> $this (input.hack:17:10) --property-fetch--> $this->message (input.hack:17:10) ----> return (input.hack:17:10) ----> ResultError::getError() (input.hack:16:33) ----> call to echo (input.hack:32:14) ----> echo#1 (input.hack:32:9)